--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,5 +42,21 @@ h2 {
 }
 
 button {
-    background-image:url("../images/img3.png");
+    background-color: white;
+    height: 50px;
+    width: 100px;
+    border: solid 4px gold;
+    font-family: cursive;
+    font-weight: bolder;
+}
+
+#timer {
+    background-image: url("../images/img2.png");
+    text-align: center;
+    margin: 20px 300px 10px;
+    color: white;
+    font-weight: bolder;
+    font-family: cursive;
+    border: solid 4px gold;
+    line-height: 40px;
 }
